--- a/browser/src/main/resources/html/index.html
+++ b/browser/src/main/resources/html/index.html
@@ -25,7 +25,7 @@
 		          <div class="accordion-heading">
 		            <div class="accordion-toggle">
 		              <a href="#em-verified-collapse" data-toggle="collapse" data-parent="#em-verified-accordion">
-		              	<h5>Latest verified</h3>
+		              	<h5>Latest verified content</h3>
 		              </a>
 		              <h6>Notes that were recently verified</h6> 
 		            </div>
