First mockup readyish

--- a/browser/src/main/resources/html/index.html
+++ b/browser/src/main/resources/html/index.html
@@ -15,7 +15,7 @@
         <!-- Page Content -->
 	    <div class="masthead">
  			<h3>extended mind</h3>
- 			<p><a href="about.html">about</a> | <a href="search.html">search</a> | login/register</p>
+ 			<p><a href="about.html">about</a> | <a href="#">search</a> | <a href="#">login/register</a></p>
 		</div>
 		<div class="container-fluid">
 		  <div class="row-fluid">
@@ -34,11 +34,14 @@
 		            <div class="accordion-inner">
 		              <ul class="em-headers">
 		                <li class="em-header">
-		                  <a href="note1.html">Notes on productivity</a><br/>
-		                  &nbsp;&nbsp;&nbsp;by <a href="timo-tiuraniemi.html">Timo Tiuraniemi</a>
-		                </li>
-		                <li class="em-header">
-		                  <a href="note2.html">Test2</a>
+                          <a href="tech.html">On the philosophy of technology</a><br/>
+                          &nbsp;&nbsp;&nbsp;by <a href="#">Timo Tiuraniemi</a><br/>
+                          &nbsp;&nbsp;&nbsp;under <a href="#">technology</a>, <a href="#">philosophy</a>
+                        </li>
+                        <li class="em-header">
+		                  <a href="#">Notes on productivity</a><br/>
+		                  &nbsp;&nbsp;&nbsp;by <a href="#">Timo Tiuraniemi</a><br/>
+                          &nbsp;&nbsp;&nbsp;under <a href="#">productivity</a>
 		                </li>
 		              </ul>
 		            </div>
@@ -62,10 +65,11 @@
 		              <ul class="em-headers">
 		                <li class="em-header">
 		                  <a href="#">Why it's great to be a nerd</a><br/>
-		                  &nbsp;&nbsp;&nbsp;by <a href="timo-tiuraniemi.html">Lauri Jarvilehto</a>
+		                  &nbsp;&nbsp;&nbsp;by <a href="#">Lauri J&auml;rvilehto</a>
 		                </li>
 		                <li class="em-header">
-		                  <a href="note2.html">Test2</a>
+		                  <a href="#">How to break out of Facebook</a><br/>
+                          &nbsp;&nbsp;&nbsp;by <a href="#">Timo Tiuraniemi</a>
 		                </li>
 		              </ul>
 		            </div>
@@ -88,11 +92,11 @@
 		            <div class="accordion-inner">
 		              <ul class="em-headers">
 		                <li class="em-header">
-		                  <a href="timo-tiuraniemi.html">Timo Tiuraniemi</a><br/>
+		                  <a href="#">Timo Tiuraniemi</a><br/>
 		                  &nbsp;&nbsp;&nbsp;15 verified notes
 		                </li>
 		                <li class="em-header">
-		                  <a href="#">Lauri Jarvilehto</a><br/>
+		                  <a href="#">Lauri J&auml;rvilehto</a><br/>
 		                  &nbsp;&nbsp;&nbsp;10 verified notes
 		                </li>
 		              </ul>
