Added development version of index with built-in lesscss compiler

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -16,19 +16,10 @@
   <div>Angular seed app: v<span app-version></span></div>
 
   <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/version/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
   -->
   <script src="lib/angularjs/angular.js"></script>
-  
-  <!-- Allows for coffeescript compiling on the fly. -->
-  <!-- Not recommended for production use. See http://coffeescript.org/#scripts. -->
-  <script src="lib/coffeescript/coffee-script.js"></script>
-
-  <script src="coffeescript/services.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/controllers.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/filters.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/directives.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/app.coffee" type="text/coffeescript"></script>
+  <script src="js/em-min.js"></script>
   
 </body>
 </html>
