More angularjs work

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -29,7 +29,7 @@
   <script src="coffeescript/controllers.coffee" type="text/coffeescript"></script>
   <script src="coffeescript/filters.coffee" type="text/coffeescript"></script>
   <script src="coffeescript/directives.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/app.coffee" type="text/coffeescript"></script>
-  
+  <script src="coffeescript/zapp.coffee" type="text/coffeescript"></script>
+
 </body>
 </html>
