Intermediate commit while debugging tests

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>extended mind</title>
   <link rel="stylesheet/less" href="less/em.less"/>
   <script src="lib/less/less-min.js"></script>
 </head>
 <body>
+
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
@@ -20,16 +21,13 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/version/angular.min.js"></script>
   -->
   <script src="lib/angularjs/angular.js"></script>
+  <script src="lib/angularjs/angular-mocks.js"></script>
   
-  <!-- Allows for coffeescript compiling on the fly. -->
-  <!-- Not recommended for production use. See http://coffeescript.org/#scripts. -->
-  <script src="lib/coffeescript/coffee-script.js"></script>
-
-  <script src="coffeescript/services.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/controllers.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/filters.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/directives.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/zapp.coffee" type="text/coffeescript"></script>
+  <script src="coffeescript/services.coffee" type="text/javascript"></script>
+  <script src="coffeescript/controllers.coffee" type="text/javascript"></script>
+  <script src="coffeescript/filters.coffee" type="text/javascript"></script>
+  <script src="coffeescript/directives.coffee" type="text/javascript"></script>
+  <script src="coffeescript/zapp.coffee" type="text/javascript"></script>
 
 </body>
 </html>
