--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -19,6 +19,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
   -->
   <script src="lib/angularjs/angular.js"></script>
+  <script src="lib/angularjs/angular-mocks.js"></script>
   <script src="js/em-min.js"></script>
 </body>
 </html>
