First somewhat working version of an AngularJS mockup

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -1,38 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-controller="MainCtrl">
 <head>
   <meta charset="utf-8">
-  <title>extended mind</title>
+  <title>{{ page.getTitle() }}</title>
+  <link rel="stylesheet" href="lib/bootstrap/bootstrap.css"/>
+  <link rel="stylesheet" href="lib/bootstrap/bootstrap-responsive.css"/>
   <link rel="stylesheet/less" href="less/em.less"/>
   <script src="lib/less/less-min.js"></script>
 </head>
 <body>
-
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
-
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/version/angular.min.js"></script>
-  -->
+  
+  <div class="em-page">
+    <div class="container" ng-view></div>
+  </div>
+ 
   <script src="lib/jquery/jquery.js"></script>
   <script src="lib/angularjs/angular.js"></script>
   <script src="lib/angularjs/angular-mocks.js"></script>
-
-  <!-- Allows for coffeescript compiling on the fly. -->
-  <!-- Not recommended for production use. See http://coffeescript.org/#scripts. -->
-  <script src="lib/coffeescript/coffee-script.js"></script>
   
-  <script src="coffeescript/services.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/controllers.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/filters.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/directives.coffee" type="text/coffeescript"></script>
-  <script src="coffeescript/zapp.coffee" type="text/coffeescript"></script>
+  <script src="js/services.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
+  <script src="js/zapp.js"></script>
 
 </body>
 </html>
