--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-controller="MainCtrl">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/em-min.css"/>
+  <title>{{ page.getTitle() }}</title>
+  <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css"/>
+  <link rel="stylesheet" href="lib/bootstrap/bootstrap-responsive.min.css"/>
+  <link rel="stylesheet" href="css/em.min.css"/>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
 
-  <div ng-view></div>
+  <div class="em-page">
+    <div class="container" ng-view></div>
+  </div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+
+  <script src="lib/jquery/jquery.js"></script>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
   -->
-  <script src="lib/angularjs/angular.js"></script>
-  <script src="lib/angularjs/angular-mocks.js"></script>
-  <script src="js/em-min.js"></script>
+  <script src="lib/angularjs/angular.min.js"></script>
+  <script src="js/em.min.js"></script>
 </body>
 </html>
