Removed Coffeescript, moved all static files under the static folder.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title ng-bind="page.getTitle()"></title>
-  <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css"/>
-  <link rel="stylesheet" href="lib/bootstrap/bootstrap-responsive.min.css"/>
-  <link rel="stylesheet" href="css/em.min.css"/>
-  
+  <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.min.css"/>
+  <link rel="stylesheet" href="static/lib/bootstrap/bootstrap-responsive.min.css"/>
+  <link rel="stylesheet" href="static/em.min.css"/>
+
 </head>
 <body>
 
@@ -16,12 +16,12 @@
   </div>
 
 
-  <script src="lib/jquery/jquery.js"></script>
+  <script src="static/lib/jquery/jquery.js"></script>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
   -->
-  <script src="lib/angularjs/angular.min.js"></script>
-  <script src="js/em.min.js"></script>
+  <script src="static/lib/angularjs/angular.min.js"></script>
+  <script src="static/em.min.js"></script>
 </body>
 </html>
