--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title ng-bind="page.getTitle()"></title>
-  <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.css"/>
-  <link rel="stylesheet" href="static/lib/bootstrap/bootstrap-responsive.css"/>
-  <link rel="stylesheet/less" href="static/less/em.less"/>
-  <script src="static/lib/less/less-min.js"></script>
+  <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.css"/>
+  <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap-responsive.css"/>
+  <link rel="stylesheet/less" href="/static/less/em.less"/>
+  <script src="/static/lib/less/less-min.js"></script>
 </head>
 <body>
 
@@ -14,15 +14,15 @@
     <div class="container" ng-view></div>
   </div>
 
-  <script src="static/lib/jquery/jquery.js"></script>
-  <script src="static/lib/angularjs/angular.js"></script>
-  <script src="static/lib/angularjs/angular-mocks.js"></script>
+  <script src="/static/lib/jquery/jquery.js"></script>
+  <script src="/static/lib/angularjs/angular.js"></script>
+  <script src="/static/lib/angularjs/angular-mocks.js"></script>
 
-  <script src="static/js/services.js"></script>
-  <script src="static/js/controllers.js"></script>
-  <script src="static/js/filters.js"></script>
-  <script src="static/js/directives.js"></script>
-  <script src="static/js/zapp.js"></script>
+  <script src="/static/js/services.js"></script>
+  <script src="/static/js/controllers.js"></script>
+  <script src="/static/js/filters.js"></script>
+  <script src="/static/js/directives.js"></script>
+  <script src="/static/js/zapp.js"></script>
 
 </body>
 </html>
