Latest content mock gets data from external JSON file. Deleted unused files.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="em">
+<html ng-app="emDev">
 	<head>
 		<meta charset="utf-8">
 		<title ng-bind="page.getTitle()"></title>
@@ -21,6 +21,7 @@
 		<script src="/static/js/controllers.js"></script>
 		<script src="/static/js/filters.js"></script>
 		<script src="/static/js/directives.js"></script>
-		<script src="/static/js/zapp.js"></script>
+		<script src="/static/test/js/httpBackendMock.js"></script>
+		<script src="/static/js/app.js"></script>
 	</body>
 </html>
