Started implementing factory services for http requests.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -16,6 +16,7 @@
 		<script src="/static/lib/jquery/jquery.js"></script>
 		<script src="/static/lib/angularjs/angular.js"></script>
 		<script src="/static/lib/angularjs/angular-mocks.js"></script>
+		<script src="/static/lib/angularjs/angular-resource.js"></script>
 
 		<script src="/static/js/services.js"></script>
 		<script src="/static/js/controllers.js"></script>
