fixed test dir path also in index_devel.html. See previous commit.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -23,6 +23,6 @@
 		<script src="/static/js/controllers.js"></script>
 		<script src="/static/js/filters.js"></script>
 		<script src="/static/js/directives.js"></script>
-		<script src="/test/static/e2e/backendMock.js"></script>
+		<script src="/test/e2e/backendMock.js"></script>
 	</body>
 </html>
