--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="emDevApp">
+<html ng-app="em.devApp">
 	<head>
 		<meta charset="utf-8">
 		<title ng-bind="page.getTitle()"></title>
@@ -24,7 +24,7 @@
 		<script src="/static/js/controllers.js"></script>
 		<script src="/static/js/filters.js"></script>
 		<script src="/static/js/directives.js"></script>
-		<script src="/static/js/auth.js"></script>
+		<script src="/static/js/userAuthenticate.js"></script>
 		<script src="/test/e2e/devApp.js"></script>
 	</body>
 </html>
