Fixed controller names in unit tests. Directive for new item (task/note).

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -24,7 +24,8 @@
 		<script src="/static/js/controllers.js"></script>
 		<script src="/static/js/filters.js"></script>
 		<script src="/static/js/directives.js"></script>
-		<script src="/static/js/userAuthenticate.js"></script>
 		<script src="/test/e2e/devApp.js"></script>
+		<script src="/static/js/userAuthenticate.js"></script>
+		<script src="/static/js/item.js"></script>
 	</body>
 </html>
