Unit tests' jQuery http json request changed to use AngularJS resource's query method. Module for user items.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -27,5 +27,6 @@
 		<script src="/test/e2e/devApp.js"></script>
 		<script src="/static/js/userAuthenticate.js"></script>
 		<script src="/static/js/item.js"></script>
+		<script src="/static/js/tasks.js"></script>
 	</body>
 </html>
