Organized controller into separate files. Improved user login and item request workflow.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -21,7 +21,10 @@
 
 		<script src="/static/js/app.js"></script>
 		<script src="/static/js/services.js"></script>
-		<script src="/static/js/controllers.js"></script>
+		<script src="/static/js/controllers/controllers.js"></script>
+		<script src="/static/js/controllers/loginController.js"></script>
+		<script src="/static/js/controllers/tasksController.js"></script>
+		<script src="/static/js/controllers/homeController.js"></script>
 		<script src="/static/js/filters.js"></script>
 		<script src="/static/js/directives.js"></script>
 		<script src="/test/e2e/devApp.js"></script>
