--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="em.App">
+<html ng-app="em.app">
 	<head>
 		<meta charset="utf-8">
 		<title ng-bind="page.getTitle()"></title>
