--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -14,9 +14,8 @@
 		</div>
 
 		<script src="/static/lib/jquery/jquery.js"></script>
-		<script src="/static/lib/jquery/jquery.cookie.min.js"></script>
+		<script src="/static/lib/jquery/jquery.cookie.js"></script>
 		<script src="/test/lib/jasmine.js"></script>
-		<script src="/test/lib/jasmine-html.js"></script>
 		<script src="/test/lib/jasmine-jquery.js"></script>
 		<script>
       jasmine.getJSONFixtures().fixturesPath = 'test/json'
@@ -24,7 +23,6 @@
 
 		<script src="/static/lib/angularjs/angular.js"></script>
 		<script src="/static/lib/angularjs/angular-mocks.js"></script>
-		<script src="/static/lib/angularjs/angular-resource.js"></script>
 		<script src="/static/lib/base64.js"></script>
 
 		<script src="/static/js/app.js"></script>
