--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -13,8 +13,8 @@
 		</div>
 
 		<script src="/static/lib/jquery/jquery.js"></script>
+		<script src="/static/lib/jquery/jquery.cookie.min.js"></script>
 		<script src="/static/lib/angularjs/angular.min.js"></script>
-		<script src="/static/lib/angularjs/angular-cookies.min.js"></script>
 		<script src="/static/lib/base64.js"></script>
 
 		<script src="/static/em.min.js"></script>
