Moved http requests and responses from ock backend and unit tests to mockHelpers.js.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -27,7 +27,7 @@
 
     <script src="/static/js/app.js"></script>
     <script src="/test/e2e/devApp.js"></script>
-    <script src="/test/helpers.js"></script>
+    <script src="/test/mockHelpers.js"></script>
 
     <script src="/static/js/controllers/controllers.js"></script>
     <script src="/static/js/controllers/homeController.js"></script>
