Added error handling service and directive. Added url list directive. Removed global variables. Renamed ulrs requiring authentication with 'my' prefix and added authentication check into these routes' resolve function.  Refactored and validated frontend with JSLint.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -40,6 +40,7 @@
     <script src="/static/js/filters/emFilters.js"></script>
 
     <script src="/static/js/services/emServices.js"></script>
+    <script src="/static/js/services/errorService.js"></script>
     <script src="/static/js/services/httpService.js"></script>
     <script src="/static/js/services/itemsService.js"></script>
     <script src="/static/js/services/tasksService.js"></script>
