Items (+ tasks & notes) functionality.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -44,6 +44,7 @@
     <script src="/static/js/services/errorService.js"></script>
     <script src="/static/js/services/httpService.js"></script>
     <script src="/static/js/services/itemsService.js"></script>
+    <script src="/static/js/services/notesService.js"></script>
     <script src="/static/js/services/pageTitle.js"></script>
     <script src="/static/js/services/tasksService.js"></script>
     <script src="/static/js/services/userAuthenticateService.js"></script>
