--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -38,6 +38,8 @@
     <script src="/static/js/controllers/tasks.js"></script>
 
     <script src="/static/js/directives/emDirectives.js"></script>
+    <script src="/static/js/directives/items.js"></script>
+    
     <script src="/static/js/filters/emFilters.js"></script>
 
     <script src="/static/js/services/emServices.js"></script>
