Url base definition and support for web crawlers, according to http://docs.angularjs.org/guide/dev_guide.services.$location.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html ng-app="em.app">
   <head>
+    <base href="/">
+    <meta name="fragment" content="!" />
     <meta charset="utf-8">
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css"/>
