UI. Task and tag functionality.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -30,9 +30,11 @@
     <script src="/test/e2e/devApp.js"></script>
     <script src="/test/mockHelpers.js"></script>
 
+    <script src="/static/js/controllers/context.js"></script>
     <script src="/static/js/controllers/home.js"></script>
     <script src="/static/js/controllers/login.js"></script>
     <script src="/static/js/controllers/my.js"></script>
+    <script src="/static/js/controllers/newTask.js"></script>
     <script src="/static/js/controllers/notes.js"></script>
     <script src="/static/js/controllers/pageNotFound.js"></script>
     <script src="/static/js/controllers/tasks.js"></script>
@@ -48,6 +50,7 @@
     <script src="/static/js/services/items.js"></script>
     <script src="/static/js/services/notes.js"></script>
     <script src="/static/js/services/pageTitle.js"></script>
+    <script src="/static/js/services/tags.js"></script>
     <script src="/static/js/services/tasks.js"></script>
     <script src="/static/js/services/authenticate.js"></script>
   </body>
