--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -36,6 +36,7 @@
     <script src="/static/js/controllers/my.js"></script>
     <script src="/static/js/controllers/newTask.js"></script>
     <script src="/static/js/controllers/notes.js"></script>
+    <script src="/static/js/controllers/project.js"></script>
     <script src="/static/js/controllers/pageNotFound.js"></script>
     <script src="/static/js/controllers/tasks.js"></script>
 
