--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -3,14 +3,17 @@
   <head>
     <base href="/">
     <meta name="fragment" content="!" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/em.min.css"/>
   </head>
   <body>
-    <div class="em-page">
-      <div class="container" ng-view></div>
+    <div class="container">
+      <div class="row-fluid">
+        <div class="col-lg-6 col-lg-offset-3 em-page" ng-view></div>
+      </div>
     </div>
 
     <script src="/static/lib/jquery/jquery.js"></script>
