--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -1,26 +1,27 @@
 <!doctype html>
 <html ng-app="em.app">
   <head>
-    <base href="/">
+    <base href="/" />
     <meta name="fragment" content="!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title ng-bind="page.getTitle()"></title>
-    <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/static/em.min.css"/>
+    <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="static/em.min.css"/>
   </head>
   <body>
     <div class="container">
       <div class="row-fluid">
-        <div class="col-lg-6 col-lg-offset-3 em-page" ng-view></div>
+        <div class="col-lg-6 col-lg-offset-3 em-page" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
     </div>
 
-    <script src="/static/lib/jquery/jquery.js"></script>
-    <script src="/static/lib/jquery/jquery.cookie.min.js"></script>
-    <script src="/static/lib/angularjs/angular.min.js"></script>
-    <script src="/static/lib/base64.js"></script>
+    <script src="static/lib/jquery/jquery.js"></script>
+    <script src="static/lib/jquery/jquery.cookie.min.js"></script>
+    <script src="static/lib/angularjs/angular.min.js"></script>
+    <script src="static/lib/angularjs/angular-mobile.min.js"></script>
+    <script src="static/lib/base64.js"></script>
 
-    <script src="/static/em.min.js"></script>
+    <script src="static/em.min.js"></script>
   </body>
 </html>
