Added missing closing slash

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="em.app">
   <head>
-    <base href="/">
+    <base href="/"/>
     <meta name="fragment" content="!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
