--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -16,6 +16,8 @@
   <body>
     <div class="container">
       <div class="row-fluid">
+        <div ng-include src="'static/partials/templates/navigation.html'"></div>
+
         <div class="col-lg-6 col-lg-offset-3 em-page" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
     </div>
@@ -43,6 +45,7 @@
     <script src="static/js/controllers/home.js"></script>
     <script src="static/js/controllers/login.js"></script>
     <script src="static/js/controllers/my.js"></script>
+    <script src="static/js/controllers/navigation.js"></script>
     <script src="static/js/controllers/newTask.js"></script>
     <script src="static/js/controllers/notes.js"></script>
     <script src="static/js/controllers/project.js"></script>
@@ -58,6 +61,7 @@
     <script src="static/js/services/errorHandler.js"></script>
     <script src="static/js/services/httpHandler.js"></script>
     <script src="static/js/services/items.js"></script>
+    <script src="static/js/services/location.js"></script>
     <script src="static/js/services/notes.js"></script>
     <script src="static/js/services/pageTitle.js"></script>
     <script src="static/js/services/tags.js"></script>
