Navigation bar ui changes.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div class="row-fluid">
-        <div ng-include src="'static/partials/templates/navigation.html'"></div>
+        <div navigation-bar></div>
 
         <div class="col-lg-6 col-lg-offset-3 em-page" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
