Added first version of queue page

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -8,54 +8,73 @@
     <link rel="stylesheet" href="em.css"/>
   </head>
   <body>
-    <div class="body">
+    <div class="wrap">
       <div class="embed-container">
         <iframe src="http://player.vimeo.com/video/74264645?title=0&byline=0&portrait=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
       </div>
       <div class="em-page">
-        <div class="em-topmargin">&nbsp;</div>
-      	<div class="stich-top"></div>
-      	<div class="container">
-      	  <div class="row">
-            <div class="col-lg-4 col-lg-offset-4"><div class="em-app"><h4>App by the Academy of Philosophy</h4></div></div>
+        <div class="em-topmargin">
+          &nbsp;
+        </div>
+        <div class="stich-top"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-lg-offset-3">
+              <div class="em-app">
+                <h4>App by the Academy of Philosophy</h4>
+              </div>
+            </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 col-lg-offset-3 em-heading"><br/><h1>A tool to simplify your life</h1></div>
+            <div class="col-lg-6 col-lg-offset-3 em-heading">
+              <br/>
+              <h1>A tool to simplify your life</h1>
+            </div>
           </div>
           <div class="row">
-            <div class="em-ingress col-lg-6 col-lg-offset-3"><h3>Extended mind is an app that organizes everything you
-          	     are doing, so that you can concentrate in one simple thing at a time.
-            </h3></div>
+            <div class="em-ingress col-lg-6 col-lg-offset-3">
+              <h3>Extended mind is an app that organizes everything you
+              are doing, so that you can concentrate in one simple thing at a time. </h3>
+            </div>
           </div>
           <div class="row">
             <div class="em-please col-lg-6 col-lg-offset-3 ">
               <h4>Please signup below, if you wish to download the free
-                  iPhone app when the beta version is launched for selected group of early users.</h4></div>
-            <div class="em-sign col-lg-4 col-lg-offset-4 "><h5>Signup here for beta release.</h5></div>
+              iPhone app when the beta version is launched for selected group of early users.</h4>
+            </div>
+            <div class="em-sign col-lg-4 col-lg-offset-4 ">
+              <h5>Signup here for beta release.</h5>
+            </div>
           </div>
           <div class="row">
             <div class="col-lg-10 col-lg-offset-1 em-email">
-            	<form class="form-inline" role="form" id="emailForm">
-            	  <div class="form-group">
-            	    <label class="sr-only" for="email">Email address</label>
-            	    <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
-            	  </div>
-            	  <input id="input" type="submit" name="submit" value="OK" class="btn btn-default"/>
-            	</form>
+              <form class="form-inline" role="form" id="emailForm">
+                <div class="form-group">
+                  <label class="sr-only" for="email">Email address</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+                </div>
+                <input id="input" type="submit" name="submit" value="OK" class="btn btn-default"/>
+              </form>
             </div>
           </div>
-          <div class="row" id="result"><div class="alert">&nbsp;</div></div>
+          <div class="row" id="result">
+            <div class="alert">
+              &nbsp;
+            </div>
+          </div>
           <div class="row">
-            <div class="em-logo col-lg-4 col-lg-offset-4"><img src="logo.png" height="40"/></div>
+            <div class="em-logo col-lg-4 col-lg-offset-4"><img src="logo.png" height="40"/>
+            </div>
           </div>
         </div>
-        <div class="footer"><a href="http://www.extendedmind.org" target="_blank">extended mind blog</a> |
-                          <a href="mailto:info@ext.md">contact</a> |
-                          <a href="http://ext.md/press">press</a><br/><br/>
-        </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="em.js"></script>
       </div>
     </div>
+    <div class="footer">
+      <a href="http://www.extendedmind.org" target="_blank">extended mind blog</a> | <a href="mailto:info@ext.md">contact</a> | <a href="http://ext.md/press">press</a>
+      <br/>
+      <br/>
+    </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="em.js"></script>
   </body>
 </html>
