Fiddling with Angular animations.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -16,9 +16,8 @@
   <body>
     <div class="container">
       <div class="row-fluid">
-        <div navigation-bar></div>
 
-        <div class="col-lg-6 col-lg-offset-3 em-page" ng-view ng-animate="{{pageAnimation}}"></div>
+        <div class="col-lg-6 col-lg-offset-3 em-page" ng-view></div>
       </div>
     </div>
 
@@ -41,6 +40,7 @@
     <script src="test/e2e/devApp.js"></script>
     <script src="test/mockHelpers.js"></script>
 
+    <script src="static/js/controllers/body.js"></script>
     <script src="static/js/controllers/context.js"></script>
     <script src="static/js/controllers/home.js"></script>
     <script src="static/js/controllers/login.js"></script>
