Swipe navigation uses partials.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row-fluid">
 
-        <div class="col-lg-6 col-lg-offset-3 em-page" ng-view></div>
+        <div class="col-lg-6 col-lg-offset-3 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
     </div>
 
