--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -17,6 +17,7 @@
     <div class="container">
       <div class="row-fluid">
 
+        <div ng-include src="'static/partials/templates/navigation.html'"></div>
         <div class="col-lg-6 col-lg-offset-3 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
     </div>
